<resources>
    <string name="app_name">YourPlace</string>
    <string name="guest_count_picker_dialog_title">Количество гостей</string>
    <string name="registration_title">Создать аккаунт</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="password_check">Повторите пароль</string>
    <string name="register_button_check">Перейти к сервису</string>
    <string name="one_person">%d человек</string>
    <string name="many_person">%d человека</string>
</resources>